fixed piranha spacing

--- a/css/game.css
+++ b/css/game.css
@@ -56,12 +56,18 @@ label {
 fieldset {
     margin: 50px 150px 20px 150px;
     background-color: white;
-    border: 3px solid black;
+    border: 5px solid black;
     padding: 0px;
 }
 
 .input-form {
     padding-top: 30px;
+    margin: 0px;
+}
+
+#piranha-input {
+    padding-top: 30px;
+    margin: 0px;
 }
 
 button {
