--- a/css/instructions.css
+++ b/css/instructions.css
@@ -14,6 +14,8 @@
 
 .title {
     border-bottom: 5px solid black;
+    padding-top: 0px;
+    margin-top: 20px;
 }
 
 section {
